fixed spacing on home page

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,7 +5,7 @@ body {
 }
 
 .home_content {
-    margin: 150px auto;
+    margin: 160px auto;
     width: 50%;
     font-family: sans-serif;
 
